# waypoint

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
data/: united-routes.xlsx
docs/: codebase-review.md
docs/.cursor/rules/python/: python.mdc
docs/style-guides/: code-cleanup-plan.md  python-style.md
src/status_optimizer/: __init__.py  config.py
src/status_optimizer/cli/: __init__.py  main.py  output.py
src/status_optimizer/constraints/: __init__.py  constraint.py
src/status_optimizer/data/: __init__.py
src/status_optimizer/data/feeds/: __init__.py  flight_feed.py
src/status_optimizer/data/providers/: __init__.py  excel_flight_feed.py  normalizers.py
src/status_optimizer/domain/: __init__.py  flight.py  itinerary.py  segment.py
src/status_optimizer/search/: __init__.py  beam_search.py  graph.py  search.py  state.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli_integration.py  test_excel_feed.py
tests/unit/: __init__.py  test_beam_search.py  test_cli.py  test_constraint.py  test_constraints.py  test_flight.py  test_flight_feed.py  test_graph.py  test_itinerary.py  test_normalizers.py  test_search.py  test_segment.py
